# django-photos

./: .gitignore  LICENSE  MANIFEST.in  README.rst  boot_django.py  manage.py  setup.cfg  setup.py
django_photos/: manage.py
django_photos/django_photos/: asgi.py  settings.py  urls.py  wsgi.py
photos/: admin.py  development_urls.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py  widgets.py
photos/photo_processors/: base_processor.py  celery_processor.py  celery_tasks.py  utils.py
photos/static/photos/: dropzone_widget.js
photos/static/photos/dropzone/: simple-styling.css
photos/templates/: base.html
photos/templates/admin/photos/gallerymodel/: change_list.html  delete_with_photos.html
photos/templates/admin/photos/photomodel/: change_list.html  upload_photos.html
photos/templates/photos/: gallerymodel_create.html  gallerymodel_list.html  photomodel_list.html
photos/templates/photos/forms/widgets/: dropzone.html
photos/tests/: helpers.py  model_factories.py  test_forms.py  test_models.py  test_views.py
